<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ethan</groupId>
    <artifactId>ethan</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <modules>
        <module>ethan-common</module>
        <module>ethan-serialization</module>
        <module>ethan-remoting</module>
        <module>ethan-registry</module>
        <module>ethan-springboot</module>
        <module>ethan-rpc</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>1.0-SNAPSHOT</revision>
        <hessian-lite.version>3.2.13</hessian-lite.version>
        <junit-jupiter.version>5.8.2</junit-jupiter.version>
        <kryo.version>4.0.2</kryo.version>
        <lombok.version>1.18.4</lombok.version>
        <slf4j.version>1.7.5</slf4j.version>
        <fastjson2.version>2.0.47</fastjson2.version>
        <curator.version>4.2.0</curator.version>
        <spring-boot.version>3.2.4</spring-boot.version>
        <netty.version>4.1.77.Final</netty.version>
        <spring.version>5.3.21</spring.version>
        <junit.version>4.13.2</junit.version>
        <commons-compress.version>1.21</commons-compress.version>
        <snappy-java.version>1.1.10.5</snappy-java.version>
        <spring-boot-configuration-processor.version>2.5.0</spring-boot-configuration-processor.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- Hessian serialize -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>hessian-lite</artifactId>
                <version>${hessian-lite.version}</version>
            </dependency>
            <!-- Kryo serialize -->
            <dependency>
                <groupId>com.esotericsoftware</groupId>
                <artifactId>kryo</artifactId>
                <version>${kryo.version}</version>
            </dependency>
            <!-- Netty -->
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <!-- Ethan Common -->
            <dependency>
                <groupId>com.ethan</groupId>
                <artifactId>ethan-common</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.ethan</groupId>
                <artifactId>ethan-rpc-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.ethan</groupId>
                <artifactId>ethan-rpc-protocol</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ethan</groupId>
                <artifactId>ethan-remoting</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.ethan</groupId>
                <artifactId>ethan-rpc</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.ethan</groupId>
                <artifactId>ethan-registry</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.ethan</groupId>
                <artifactId>ethan-serialization</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>org.xerial.snappy</groupId>
                <artifactId>snappy-java</artifactId>
                <version>${snappy-java.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-handler</artifactId>
                <version>${netty.version}</version> <!-- 请根据需要选择具体版本 -->
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>